# pokemon-red-ai

./: .editorconfig  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  LICENSE  MODEL_CARD.md  README.md  agent.py  pokemon_rl_trainer.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: auto-assign.yml  test.yml
configs/: alerts.example.yaml  wandb_report_template.md
docs/: research_playbook.md  testing_roadmap.md
paper/: .gitignore  Makefile  README.md  SCAFFOLDING.md  analysis_plan.md  compute_ledger.md  compute_plan.md  main.tex  references.bib
paper/sections/: 01_introduction.tex  02_related_work.tex  03_environment.tex  04_methods.tex  05_results.tex  06_discussion.tex
pokemon_red_ai/: __init__.py
pokemon_red_ai/analysis/: __init__.py  comparison.py
pokemon_red_ai/cli/: __init__.py  __main__.py  commands.py
pokemon_red_ai/environment/: __init__.py  gym_env.py  observations.py  rewards.py
pokemon_red_ai/game/: __init__.py  agent.py  controls.py  event_flags.py  memory.py  rom.py
pokemon_red_ai/training/: __init__.py  alerts.py  callbacks.py  models.py  trainer.py
pokemon_red_ai/utils/: __init__.py  config.py  file_utils.py
scripts/: analyze.py  check_encoder_capacity.py  compare.py  create_save_states.py  eval.py  mirror_paper_to_overleaf.sh  monitor.py  run_pilots.sh  seed_utils.py  train.py  verify_event_flag_ids.py
tests/: conftest.py
tests/integration/: conftest.py  test_eval_schema.py  test_performance_smoke.py  test_reward_regression.py  test_seeding_determinism.py
(+25 files in other folders)
